--- a/[Patient-Level] (3) REFLACX_MIMIC_import copy.ipynb
+++ b/[Patient-Level] (3) REFLACX_MIMIC_import copy.ipynb
@@ -256,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21be16478ffc4c0e97c451d7013891fc",
+       "model_id": "757cf56e3ae94d14945d9d7d770ead5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,6 +290,7 @@
     "                REFLACX_FOLDER_PATH, \"main_data\", study_id)\n",
     "            main_destination_path = os.path.join(save_folder_path, \"main_data\",study_id)\n",
     "            copytree(main_source_path, main_destination_path, dirs_exist_ok=True, copy_function=copy)\n",
+    "            os.remove(os.path.join(main_destination_path, \"index.html\"))\n",
     "\n",
     "            # also do this for gaze data\n",
     "            gaze_source_path = os.path.join(\n",
@@ -332,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
