--- a/[Patient-Level] (4) Import _CXR_images copy.ipynb
+++ b/[Patient-Level] (4) Import _CXR_images copy.ipynb
@@ -354,7 +354,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b78a2d8109e44f1ad865415ad8fa2f0",
+       "model_id": "36a16c2c8c6f470f92e01f45d9132443",
        "version_major": 2,
        "version_minor": 0
       },
@@ -399,8 +399,12 @@
     "        # CXR-jpg\n",
     "        source_path = os.path.join(\n",
     "            CXR_JPG_FOLDER_PATH, \"files\", f\"p{str(subject_id)[:2]}\", f\"p{subject_id}\", f\"s{study_id}\")\n",
-    "        copytree(source_path, os.path.join(cxr_jpg_save_folder_path, f\"s{study_id}\"),\n",
+    "        cxr_destination_path =  os.path.join(cxr_jpg_save_folder_path, f\"s{study_id}\")\n",
+    "        copytree(source_path,cxr_destination_path,\n",
     "                copy_function=copy, dirs_exist_ok=True)\n",
+    "        \n",
+    "        os.remove(os.path.join(cxr_destination_path, \"index.html\"))\n",
+    "        \n",
     "\n",
     "        # import the dicom\n",
     "        # source_path = os.path.join(\n",
@@ -458,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +773,7 @@
        "360460   2.153022e+12         NaN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
