--- a/[Patient-Level] (2) EyeGaze_MIMIC_import copy.ipynb
+++ b/[Patient-Level] (2) EyeGaze_MIMIC_import copy.ipynb
@@ -400,7 +400,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e682276312b408e91d75752870abf88",
+       "model_id": "1ae03491e33045b797c383f922f3ba03",
        "version_major": 2,
        "version_minor": 0
       },
@@ -443,7 +443,9 @@
     "        destination_path = os.path.join(\n",
     "            save_folder_path, \"audio_segmentation_transcripts\", dicom_id)\n",
     "        copytree(source_path, destination_path,\n",
-    "                 dirs_exist_ok=True, copy_function=copy)"
+    "                 dirs_exist_ok=True, copy_function=copy)\n",
+    "        os.remove(os.path.join(destination_path, \"index.html\"))\n",
+    "        "
    ]
   },
   {
@@ -470,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 08:08:27) [Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
