update the implementation for windows.

--- a/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
+++ b/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/jrhs/Desktop/physionet.org/files/mimic-cxr-jpg/2.0.0'"
+       "'D:/physionet.org/files/mimic-cxr-jpg/2.0.0'"
       ]
      },
      "execution_count": 2,
@@ -66,7 +66,6 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/jrhs/Desktop/physionet.org/files/mimic-cxr-jpg/2.0.0/mimic-cxr-2.0.0-metadata.csv.gz'"
       ]
      },
      "execution_count": 3,
@@ -1458,7 +1457,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c227783a5a8f4670b499ed3c7116aba7",
+       "model_id": "6f67dc74488940dc92bdc5f2f83a0841",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2039,7 +2038,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/g1/sgkjvx2j2sqflt1qfc9phrvh0000gn/T/ipykernel_87821/3821571485.py:3: DtypeWarning: Columns (16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\mike8\\AppData\\Local\\Temp\\ipykernel_29224\\3821571485.py:3: DtypeWarning: Columns (16) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(os.path.join(folder_path,  f\"{n}.csv.gz\"))\n"
      ]
     },
@@ -2054,7 +2053,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8be30efe67064fd3be9a9856b7b56334",
+       "model_id": "89d9736fc56244f395b4355e64d8164b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2076,7 +2075,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "073996a86f9a4c43a01b5a5852724143",
+       "model_id": "468f60f6f8294d23b7f8f010e29bcc0a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2098,7 +2097,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ccfdd0a49e6f42269ba2738d66a61ecf",
+       "model_id": "ab609b8607b54cc983ddef82b7d0dfb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2113,7 +2112,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/g1/sgkjvx2j2sqflt1qfc9phrvh0000gn/T/ipykernel_87821/3821571485.py:3: DtypeWarning: Columns (16,18,24,26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\mike8\\AppData\\Local\\Temp\\ipykernel_29224\\3821571485.py:3: DtypeWarning: Columns (16,18,24,26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(os.path.join(folder_path,  f\"{n}.csv.gz\"))\n"
      ]
     },
@@ -2128,7 +2127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff96b56cdeb64c4cb65ec72f8513ef82",
+       "model_id": "03e8aa85a7fe41889ea0c7e4cd298ba2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2150,7 +2149,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c75e8b45dba487695b83ec537bba957",
+       "model_id": "cd5c5adc3a074b63a48c60edd13c1791",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2172,7 +2171,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eedd9dfebcda4049a954203d18421cb3",
+       "model_id": "527b0113e304439a8b4d0b25e49d3c8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2194,7 +2193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d27c315f02964aa3b8d738a02ef61082",
+       "model_id": "8dff7d27f13f48c9b64a3f64d629b547",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2216,7 +2215,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea65a938f45c4175bd58f5e38d6923be",
+       "model_id": "1e76aeefaf8944b5943f9e0cfafdca8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2231,7 +2230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/g1/sgkjvx2j2sqflt1qfc9phrvh0000gn/T/ipykernel_87821/3821571485.py:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\mike8\\AppData\\Local\\Temp\\ipykernel_29224\\3821571485.py:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(os.path.join(folder_path,  f\"{n}.csv.gz\"))\n"
      ]
     },
@@ -2246,7 +2245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cdc8db4a42564b5890859513828ef5e0",
+       "model_id": "12d8cafc0ffd4233b8d4f0590f992b16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2268,7 +2267,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dc2325ee47e4ca48be4b709f7c390f6",
+       "model_id": "0b0cbc7e483b46d38b071f913801563d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2290,7 +2289,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57d54ff1abaf49a69f7e7fb8bbefc10d",
+       "model_id": "c7b4e5dda83942afb17ab1f865979dd8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2305,7 +2304,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/g1/sgkjvx2j2sqflt1qfc9phrvh0000gn/T/ipykernel_87821/3821571485.py:3: DtypeWarning: Columns (8,11,14,19,20,22,28,29,30,31,32) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\mike8\\AppData\\Local\\Temp\\ipykernel_29224\\3821571485.py:3: DtypeWarning: Columns (8,11,14,19,20,22,28,29,30,31,32) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(os.path.join(folder_path,  f\"{n}.csv.gz\"))\n"
      ]
     },
@@ -2320,7 +2319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c845ba17e954a9aa3b8bb499a5df215",
+       "model_id": "87c711f643fa4a52b4a119ca84fad6cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2342,7 +2341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ba3831d213f4622a1ab82f0788d6c27",
+       "model_id": "accaaf9fadfc46d389e37fc957e9bddf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2364,7 +2363,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a190ca4c055d4af29971dd9d13fa7af7",
+       "model_id": "ec255f9a0b4d4bfea9274f9373fa0567",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2386,7 +2385,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92936436a80b4b5eb6e04974c140bfbd",
+       "model_id": "cc55ab0eb026404d90a382b6fb91b7d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2408,7 +2407,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78bdf8cee5924bdc8fe9a57e58663351",
+       "model_id": "bcdf578c3ff44d5bbb60991fd3227597",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2438,7 +2437,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e32c1041906649b6ba8597ce1dfb8419",
+       "model_id": "be5eaca6210a46dd847a89f78aef0923",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2460,7 +2459,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ef1ae806c644ffc82ae6f0e784e9487",
+       "model_id": "d19a9855690a4b9685f6ec854acb4a06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2482,7 +2481,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14d66e21d04f4aabb332cb969cb0ad26",
+       "model_id": "2be30bf8b80b41639a24c7e0122ca534",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2504,7 +2503,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2701ffa5097347d39d18369c75774254",
+       "model_id": "797797c543954dc6be94ddf10d7d91f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2526,7 +2525,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebfa17339913491fb3e64620159452e2",
+       "model_id": "b3f1a3e0ca0c41a98d4207e2b0f5bd12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2548,7 +2547,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dec592ffb0bf4d7aa67b25baa6347cd6",
+       "model_id": "e7ee1cba0c9c4f039f1372ea43df6306",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2570,7 +2569,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "63cba78ed1ff4d93a69bbc79af39c3d1",
+       "model_id": "52d34d1c3d3544c783274f487f145428",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2592,7 +2591,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cd8abea269642609375395010ab8f0d",
+       "model_id": "cb2149b378524bf6823a6adada412ea8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2616,7 +2615,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "77b117b940fa483097e7ebb698a83fcf",
+       "model_id": "9952ca7b4604433bb0320964222f8d2a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2638,7 +2637,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd1e0c6a7bc54d70bf3f839472c8a0e4",
+       "model_id": "169a1b05f56b4cdeabcb4654c7b24599",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2660,7 +2659,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc1d84b0e5224edd9c38a032e3ea22c0",
+       "model_id": "c0b931f53eda4949b6555e7a1962b035",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2682,7 +2681,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98faf3deeb1a4348bc3a589f6ec659e0",
+       "model_id": "ca342b8aea7a436aade223b51e05c055",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3231,7 +3230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
