--- a/[Patient-Level] (3) REFLACX_MIMIC_import copy.ipynb
+++ b/[Patient-Level] (3) REFLACX_MIMIC_import copy.ipynb
@@ -256,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "757cf56e3ae94d14945d9d7d770ead5f",
+       "model_id": "c28bde4573aa4fd5957b351676ad3af5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -302,12 +302,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\physionet.org\\\\files\\\\reflacx-xray-localization\\\\1.0.0\\\\main_data\\\\P300R984070'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_source_path"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -333,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
