--- a/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
+++ b/[Patient-Level] (1) Clinical_data_import_mini copy.ipynb
@@ -66,6 +66,7 @@
     {
      "data": {
       "text/plain": [
+       "'D:/physionet.org/files/mimic-cxr-jpg/2.0.0\\\\mimic-cxr-2.0.0-metadata.csv.gz'"
       ]
      },
      "execution_count": 3,
